# sputil

./: .clang_complete  .gitignore  LICENSE  Makefile  README.md  compile_commands.json  meson.build  sputil.pc  sputil.yaml
src/: main.cpp  meson.build
src/buffer/: ByteBuffer.cpp  ByteBuffer.h  BytesView.cpp  BytesView.h  CircularBuffer.cpp  CircularBuffer.h  CircularByteBuffer.cpp  CircularByteBuffer.h  Sink.cpp  Sink.h  Thing.cpp  Thing.h
src/collection/: Array.cpp  Array.h
src/concurrent/: Barrier.cpp  Barrier.h  ReadWriteLock.cpp  ReadWriteLock.h
src/encode/: Hex.cpp  Hex.h  hex.cpp  hex.h
src/graph/: ColoringGreedy.cpp  ColoringGreedy.h  Dijkstra.h  Directed.cpp  Directed.h  Graph.cpp  Graph.h  Undirected.cpp  Undirected.h  graph.cpp  graph.h  graph2.cpp  graph2.h
src/hash/: RabinKarpHash.cpp  RabinKarpHash.h  crc.cpp  crc.h  djb2.cpp  djb2.h  fnv.cpp  fnv.h  standard.cpp  standard.h  util.h
src/heap/: binary.h
src/io/: fd.cpp  fd.h  file.cpp  file.h  path.cpp  path.h
src/list/: FixedList.cpp  FixedList.h  LinkedList.h  SkipList.h  list_extra.h
src/map/: HashMap.h  HashMapProbing.cpp  HashMapProbing.h  HashMapTree.cpp  HashMapTree.h  HashSet.h  HashSetOpen.cpp  HashSetOpen.h  HashSetProbing.cpp  HashSetProbing.h  HashSetTree.cpp  HashSetTree.h  ProbingHashMap.cpp  ProbingHashMap.h  Set.h
src/map/impl/: entry.h
src/memory/: Allocator.h  FixedStackPooledAllocator.h  StackPooledAllocator.h
src/np/: knapsack.cpp  knapsack.h  knights_tour.cpp  knights_tour.h  knights_tour.py  longest_palindromic_substring.cpp  longest_palindromic_substring.h  nqueens.cpp  nqueens.h  problem.cpp  problem.h  subset_sum.cpp  subset_sum.h  sudoku.cpp  sudoku.h
src/numeric/: BigInteger.h  types.h
src/os/: stack.cpp  stack.h
src/prng/: URandom.cpp  URandom.h  random.h  util.cpp  util.h  xorshift.cpp  xorshift.h
src/problem/: bits_problem.cpp  bits_problem.h  bst_problem.h  fibonacci.cpp  fibonacci.h  list_problem.cpp  list_problem.h  misc.cpp  misc.h  misc_problem.cpp  misc_problem.h  prob_list.cpp  string_problem.cpp  string_problem.h  tower_of_hanoi.cpp  tower_of_hanoi.h
src/queue/: Queue.h
src/sort/: heapsort.cpp  heapsort.h  insertionsort.cpp  insertionsort.h  introsort.cpp  introsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  selectionsort.cpp  selectionsort.h  util.h
src/stack/: DynamicStack.h  HeapStack.h  Stack.h
src/string/: ascii.cpp  ascii.h  boyer_moore.cpp  boyer_moore.h  boyer_moore_horspool_search.cpp  boyer_moore_horspool_search.h  boyer_moore_search.cpp  boyer_moore_search.h  knuth_morris_pratt_search.cpp  knuth_morris_pratt_search.h  levenshtein.cpp  levenshtein.h  naive_search.cpp  naive_search.h  rabin_karp_search.cpp  rabin_karp_search.h  view.cpp  view.h
src/tree/: Splay.h  StaticTree.cpp  StaticTree.h  avl.h  avl2.cpp  avl2.h  avl_insert.h  avl_rec.cpp  avl_rec.h  avl_remove.h  bst.h  bst_extra.cpp  bst_extra.h  btree.cpp  btree.h  btree_extra.h  btree_rec.cpp  btree_rec.h  dyn_tree.h  red-black.cpp  red-black.h  static_tree.h  tree.h
src/trie/: RadixTree.h  Trie.h
src/util/: Bitset.cpp  Bitset.h  Bloomfilter.cpp  Bloomfilter.h  CircularBuffer.h  Matrix.cpp  Matrix.h  QuadSet.cpp  QuadSet.h  Timer.cpp  Timer.h  array.h  assert.cpp  assert.h  cartesian.h  combinations.cpp  combinations.h  comparator.h  conversions.cpp  conversions.h  maybe.h  numeric.cpp  numeric.h  permutation.cpp  permutation.h  round.h  subsets.cpp  subsets.h  swap.h  timeout.cpp  timeout.h  typed.h
test/: .clang_complete  Makefile  ReadWriteLockTest.cpp  compile_commands.json  main.cpp  meson.build  tests.cpp
test/buffer/: ByteBufferTest.cpp  BytesViewTest.cpp  CircularBufferTest.cpp  CircularByteBufferTest.cpp  SinkTest.cpp  ThingTest.cpp
test/collection/: ArrayTest.cpp
test/concurrent/: ReadWriteLockTest.cpp
test/encode/: hexTest.cpp
test/graph/: DijkstraTest.cpp  Graph2Test.cpp  GraphTest.cpp
test/hash/: crcTest.cpp  fnvTest.cpp
test/heap/: binaryHeapTest.cpp
test/io/: fileTest.cpp
test/list/: FixedListTest.cpp  LinkedListTest.cpp  SkipListTest.cpp
test/map/: HashMapProbingTest.cpp  HashSetOpenTest.cpp  HashSetProbingTest.cpp  HashSetTest.cpp  HashSetTreeTest.cpp  ProbingHashMapTest.cpp
test/np/: knapsackTest.cpp  knights_tourTest.cpp  longest_palindromic_substringTest.cpp  npTest.cpp  nqueensTest.cpp  sudokuTest.cpp
test/other/: tmpl.cpp  tmpl.h  tmplTest.cpp
test/prng/: randomTest.cpp
test/problem/: bst_problemTest.cpp  fibonacciTest.cpp  list_problemTest.cpp  miscTest.cpp  probListTest.cpp  string_problemTest.cpp  tower_of_hanoiTest.cpp
test/sort/: heapsortTest.cpp  insertionsortTest.cpp  introsortTest.cpp  mergesortTest.cpp  quicksortTest.cpp  selectionsortTest.cpp
test/stack/: StackTest.cpp
test/string/: StringUtilTest.cpp  levenshteinTest.cpp  string_searchTest.cpp
test/test/: gcstruct.cpp  gcstruct.h
test/tree/: StaticTreeTest.cpp  avlRecTest.cpp  avlTest.cpp  bst_test.cpp  btreeTest.cpp  btree_recTest.cpp  red-blackTest.cpp  static_treeTest.cpp  treeTest.cpp
test/util/: BitsetTest.cpp  BloomFilterTest.cpp  CircularBufferTest.cpp  FeistlNetTest.cpp  MaybeTest.cpp  QuadsetTest.cpp  permutationTest.cpp
